--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
@@ -1,5 +1,5 @@
 .wd-nav-bar {
-  width:85px;
+  max-width:85px;
   /* height:100vh; */
 }
 
@@ -37,5 +37,14 @@ ul {
 .wd-nav-bar-icon-text-set{
   justify-content: center; align-items: center; display:flex; flex-direction: column;
 }
-
+.sidebar {
+  position: absolute;
+height: 100%;
+display: flex;
+flex-direction: column;
+width: 85px;
+z-index: 100;
+background-color: black;
+overflow: auto;
+}
 
