mostly done with sidebar

--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
@@ -6,3 +6,17 @@ body * {
   font-family: Arial;
   padding-left: 100;
 }
+
+ul {
+  list-style: none;
+}
+
+.wd-menu-list .wd-active-item {
+  background-color: white;
+}
+.wd-menu-list .wd-active-item a {
+  color:rgb(167, 21, 35);
+}
+.wd-menu-list .wd-active-item i {
+  color:rgb(167, 21, 35);
+}
