--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/sidebar.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/sidebar.css
@@ -1,8 +1,3 @@
-.wd-nav-bar {
-  max-width:85px;
-  /* height:100vh; */
-}
-
 
 #wd-neuLogo{
   width:60px;
@@ -10,14 +5,14 @@
   
 }
 
-.wd-nav-bar-a-tags{
+.wd-sidebar-a-tags{
   color:white;
   text-decoration: none;
   display:block;
   padding:10px;
 }
 
-.wd-nav-bar-symbols{
+.wd-sidebar-symbols{
   display: block;
   color:red;
   font-size: 30px;
@@ -27,9 +22,6 @@
   padding: 0;
 }
 
-.wd-nav-bar-icon-text-set{
-  justify-content: center; align-items: center; display:flex; flex-direction: column;
-}
 
 #wd-sidebar {
 position: fixed;
