refactored to grid css

--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
@@ -1,7 +1,8 @@
-#page-contents{
+/* #page-contents{
     margin-left: 85px;
-}
-
-ul {
-    list-style: none;
+} */
+.wd-home-page{
+    display: grid;
+    grid-template-columns:85px repeat(3, 1fr);
+    height:100vh;
   }
