--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
@@ -13,6 +13,7 @@ ul {
 
 .wd-menu-list .wd-active-item {
   background-color: white;
+  width:85px;
 }
 .wd-menu-list .wd-active-item a {
   color:rgb(167, 21, 35);
@@ -20,3 +21,4 @@ ul {
 .wd-menu-list .wd-active-item i {
   color:rgb(167, 21, 35);
 }
+
