profile page in progress

--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
@@ -1,10 +1,10 @@
 body {
-  padding-left: 100;
+  margin:0;
 }
   
 body * {
   font-family: Arial;
-  padding-left: 100;
+  margin: 0;
 }
 
 ul {
@@ -18,7 +18,9 @@ ul {
 .wd-menu-list .wd-active-item a {
   color:rgb(167, 21, 35);
 }
-.wd-menu-list .wd-active-item i {
+
+/* a i or just i*/
+.wd-menu-list .wd-active-item a i {
   color:rgb(167, 21, 35);
 }
 
