--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/profile/index.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/profile/index.css
@@ -1,11 +1,52 @@
-.profile-page{
-    display:grid;
-    grid-template-columns: 85px repeat(2,1fr);
+.wd-profile-page{
+    display:flex;
+    /* grid-template-columns: 85px 170px 1fr; */
     margin:0px;
     padding:0px;
     height:100vh;
 }
-/* 
-body{
-    margin:0;
-} */
+
+.wd-account-profile-section{
+    /* display: inline-block; */
+    width:100%;
+}
+
+.wd-top-bar{
+    margin:24px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #C7CDD1;
+    font-size: 18px;
+    color:#2D3B45;
+}
+
+.wd-main-container{
+    display:flex;
+    flex-direction: row;
+    width: 100%;
+    
+}
+
+.wd-account-details{
+    display:flex;
+    width:100%;
+}
+
+.wd-edit-profile-button{
+    width:1fr; 
+    display: flex; 
+    flex: 1;
+    align-items: start;
+    justify-content: right;
+    margin-top:20px;
+    padding-right:10px;
+}
+
+.wd-account-info{
+    width:1fr; 
+    display: inline-flex; 
+    flex:3;
+}
+
+.wd-page-wrapper{
+    width: 100%;
+}
