--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/expanded-nav.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/expanded-nav.css
@@ -32,6 +32,10 @@
     transform:scale(1.05);
 }
 
+.wd-expanded-nav ul li a:hover{
+    color: rgb(125, 3, 17);
+}
+
 .wd-active-expanded-item{
     color:black;
     border-left-style: solid;
