--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/profile/index.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/profile/index.css
@@ -38,7 +38,7 @@
     align-items: start;
     justify-content: right;
     margin-top:20px;
-    padding-right:10px;
+    padding-right:20px;
 }
 
 .wd-account-info{
@@ -59,5 +59,14 @@
 }
 .wd-account-info * {
     margin-bottom: 20px;
+}
+
+.wd-account-info > p > span > a{
+    color:#b52828;
+}
+
+.wd-account-info > p > span:hover{
+    text-decoration: underline;
+    color:rgb(125, 3, 17);
 }
 
