--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/dashboard.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/dashboard.css
@@ -25,6 +25,25 @@
     width:260px;
 }
 
-.wd-course-card > div{
+.wd-course-card > a > div{
     width:250px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    height:300px;
+}
+
+.card-title{
+    font-size:18px;
+    font-weight: bold;
+    color:rgb(26, 127, 147);
+}
+
+.card-title{
+    height:43px;
+}
+
+.wd-course-card{
+    margin-left:20px;
+    margin-right:20px;
+
 }
