--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
@@ -1,13 +1,142 @@
-
-.wd-home-page{
-    display: grid;
-    grid-template-columns:4fr 1fr;
-    height:100vh;
-}
-
 .wd-page-wrapper{
     display:grid;
     grid-template-columns: 85px 1fr;
     grid-template-rows: 100%;
-    height:100%;
+    height:100vh;
+}
+
+.wd-home-page{
+    display: grid;
+    grid-template-columns:4fr 1fr;
+    /* grid-template-rows: 48px 1fr; */
+    height:100vh;
+}
+
+
+
+#wd-bread{
+    width:100%;
+    height:48px;
+    background-color: white;
+    margin-left:15px;
+    margin-top:16px;
+}
+
+
+.fa-bars{
+    color:#b52828;
+}
+
+.wd-hamburger-button{
+    background-color: #fff;
+    border:none;
+    width:36px;
+}
+
+body a{
+    color:#b52828;
+}
+
+body hr{
+    border:1px solid #c7cdd1;
+    margin-bottom:5px;
+}
+
+.wd-switch-buttons{
+    border-radius: 3px;
+    border-style:none;
+    margin-right:1px;
+    border-color:#2d3b45;
+    background-color: #f5f5f5;
+}
+
+.wd-switch-buttons:hover{
+    background-color: #e8e8e8;
+    color:#2d3b45;
+}
+
+.btn{
+    min-height:38px;
+    white-space:normal !important; 
+    word-wrap: break-word; 
+    word-break: normal;
+}
+
+a{
+    text-decoration: none;
+}
+
+.list-group *{
+    border-style: none;
+}
+
+.list-group li{
+    border-bottom: 1px solid #c7cdd1;
+}
+
+.wd-module-title{
+    font-weight:bold;
+    font-size:16px;
+
+}
+
+.wd-module-secondary-title{
+    font-weight:bold;
+    font-size:18px;
+
+
+}
+
+.wd-module-item{
+    margin-left:15px;
+    font-weight: bold;
+    font-size:18px;
+}
+
+.wd-module-item a{
+    font-weight:normal;
+    font-size:18px;
+}
+
+.wd-pub-buttons{
+    min-width:49%;
+    border-radius: 3px;
+    border:1px none #c7cdd1;
+    text-align: center;
+    justify-content: center;
+    vertical-align: middle;
+    padding:0px;
+}
+
+.wd-unpublish-button{
+    min-width:49%;
+    border-radius: 3px;
+    border:1px solid #c7cdd1;
+    text-align: center;
+    justify-content: center;
+    vertical-align: middle;
+    padding:0px;
+    background-color: #f5f5f5;
+}
+
+.wd-status-bar-list button{
+    display:block;
+    background-color: #f5f5f5;
+    border-color:#c7cdd1;
+    width:100%;
+    text-align: start;
+    padding-left: 30px;
+    margin:5px auto;
+}
+
+.wd-status-bar-list {
+    margin-top: 15px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.wd-status-bar{
+    width:90%;
 }
