completed home.html

--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
@@ -2,8 +2,8 @@
     display:grid;
     grid-template-columns: 85px 1fr;
     /* grid-template-rows: 100%; */
-    height:100vh;
-} */
+    /* height:100vh;
+} */ */
 
 .wd-home-page{
     display: grid;
