--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
@@ -4,7 +4,7 @@ body {
   
 body * {
   font-family: Arial;
-  margin: 0;
+  margin-top: 0px;
 }
 
 ul {
@@ -18,8 +18,38 @@ ul {
   color:rgb(167, 21, 35);
 }
 
-/* a i or just i*/
 .wd-menu-list .wd-active-item a i {
   color:rgb(167, 21, 35);
 }
 
+.wd-hamburger-button{
+  background-color: #fff;
+  border:none;
+  width:36px;
+}
+
+#wd-bread{
+  width:100%;
+  height:48px;
+  background-color: white;
+  margin-left:15px;
+  margin-top:16px;
+}
+
+.wd-sandwich-sidebar-button{
+  background:none;
+  color:white;
+  border:none;
+}
+.wd-sandwich-sidebar-button i{
+  color:white;
+}
+
+.fa-bars{
+  color:#b52828;
+}
+
+.hr{
+  border:1px solid #c7cdd1;
+  margin-bottom:5px;
+}
