--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/assignments.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/assignments.css
@@ -13,3 +13,44 @@
     width:260px;
 }
 
+.wd-search-row{
+    margin-bottom: 10px;
+}
+
+.wd-class-percentage{
+    border:1px solid gray;
+    padding:3px;
+    padding-left:8px;
+    padding-right:8px;
+    border-radius: 20px;
+    margin:0px;
+}
+
+.wd-class-title{
+    font-weight: bold;
+    font-size: large;
+    margin-left: 5px;
+    margin-bottom: 0px;
+}
+
+.wd-assignments-icons{
+    color:#2D3B45;
+    margin-left:7px;
+}
+
+.wd-assignmen-items a{
+    color:black;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.wd-assignmen-items{
+    border-left:4px solid green;
+}
+
+.wd-check-icon{
+    color:green;
+    border-style: none;
+    margin-right: 10px;
+
+}
