stylizing edit.html

--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/home.css
@@ -154,7 +154,8 @@ a{
 
 
 .wd-sandwich-sidebar-button-container{
-    display:flex; align-items: center;
+    display:flex; 
+    align-items: center;
 }
 
 .wd-small-bar-name-container p{
