--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/style.css
@@ -63,3 +63,7 @@ ul {
   background-color: #f5f5f5;
   color:#2d3b45;
 }
+
+.breadcrumb-item + .breadcrumb-item::before {
+  content: var(--bs-breadcrumb-divider, ">") /* rtl: var(--bs-breadcrumb-divider, "/") */;
+}
