--- a/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/edit.css
+++ b/2023/fall/webdev/kanbas-react-web-app/public/kanbas/kanbas-css/edit.css
@@ -1,3 +1,6 @@
+html, body{
+    min-width:1200px;
+}
 .breadcrumb li a{
     color:#b52828;
     text-decoration: none;
@@ -6,6 +9,8 @@
 .wd-entire-page{
     min-height:100vh;
 }
+
+
 
 .wd-published-message p{
     color:green;
@@ -104,4 +109,32 @@
 .wd-assign-two{
     width:95%;
 
+}
+
+
+@media (max-width:1260px) {
+    .wd-status-bar-container{
+        display:none;
+    }
+}
+
+@media (max-width:800px){
+    .wd-expanded-nav-container{
+        display:none;
+    }
+    .wd-sidebar-container{
+        display:none;
+    }
+    .wd-breadcrumb-container{
+        display:none;
+    }
+    .wd-small-navbar{
+        display:normal;
+    }
+}
+
+@media (min-width:801px){
+    .wd-small-navbar{
+        display:none;
+    }
 }
