--- a/2023/fall/webdev/kanbas-react-web-app/src/Kanbas/Courses/Home/index.css
+++ b/2023/fall/webdev/kanbas-react-web-app/src/Kanbas/Courses/Home/index.css
@@ -79,9 +79,8 @@
 }
 .btn.wd-switch-buttons{
     border-radius: 3px;
-    border-style:none;
     margin-right:2px;
-    border-color:#2d3b45;
+    border:1px solid rgb(199, 205, 209);
     background-color: #f5f5f5;
     color:#2d3b45;
     padding:2px 6px 2px 6px;
@@ -95,8 +94,9 @@
     max-width:150px;
     height:38px;
     margin-left:2px;
-    margin-right:1px;
-
+    margin-right:2px;
+    border:1px solid rgb(199, 205, 209);
+    border-radius: 3px;
 }
 
 .dropdown{
