--- a/2023/fall/webdev/kanbas-react-web-app/src/Kanbas/kanbas-styles.css
+++ b/2023/fall/webdev/kanbas-react-web-app/src/Kanbas/kanbas-styles.css
@@ -3,11 +3,11 @@
 }
 
 .wdKanbasBorderGray {
-    border-color:#c7cdd1;
+    border:1px solid #c7cdd1 ;
 }
 
 .wdKanbasBgGray{
-    background-color: #f5f5f5;
+    background-color: #f5f5f5 !important;
 }
 
 .wdKanbasBtnColor {
@@ -22,7 +22,12 @@
 
 
 .wdListNoLine {
-    text-decoration: none
+    text-decoration: none;
+}
+
+.wdListNoDot{
+    list-style-type: none;
+
 }
 
 .wd-main-content-wrapper{
